--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "snarkjs": "^0.7.5",
+    "thirdweb": "^5.116.1",
     "viem": "^2.21.0"
   },
   "devDependencies": {
