--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@x402/core": "^2.2.0",
     "@x402/evm": "^2.2.0",
     "@x402/express": "^2.2.0",
+    "@x402/fetch": "^2.2.0",
     "dotenv": "^17.2.3",
     "next": "^15.1.0",
     "poseidon-lite": "^0.3.0",
